--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		
 		if (Query.m)
 		{
-			document.getElementById("content").src = "https://mehkako.github.io/KingTale/Pages/" + Query.m + ".html"
+			document.getElementById("content").src = "./Pages/" + Query.m + ".html"
 		}
 		else
 		{
