--- a/Pages/games.html
+++ b/Pages/games.html
@@ -2,7 +2,7 @@
 <html>
 	<body>
 		<div class="GameTab" onclick="window.open('https://www.minecraft.net/en-us')">
-			<img class="GameImage" src="../assets/Images/minecraft.jpg">
+			<img class="GameImage" src="https://raw.githubusercontent.com/MehKako/KingTale/main/Assets/Images/minecraft.jpg">
 			<p class="GameName">Minecraft</p>
 		</div>
 	</body>
